# link_prediction

./: .gitignore  .pre-commit-config.yaml  notes.md  pyproject.toml
ours/: diagnose.py  eval_oracle.py  evaluate.py  main.py  model.py  plot.py  plot_exit_ridge.py  run_all.py  run_gcn.py  run_pubmed.py  shared.py  train.py
