[project]
name = "link-prediction"
version = "0.1.0"
description = "Mini-project for L65 course"
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
target-version = "py312"
line-length = 119


