[project]
name = "link-prediction"
version = "0.1.0"
description = "Mini-project for L65 course"
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ogb>=1.3.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "tqdm>=4.67.3",
]

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-scatter = ["torch"]

[tool.ruff]
target-version = "py312"
line-length = 119
